Project2/kubernetes/p-one-service.yml
apiVersion: v1
kind: Service
metadata:
  name: project-one
  namespace: jonathan-schmitz
spec:
  selector:
    app: project-one
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8080
  type: ClusterIP
