Project2/kubernetes/p-one-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: project-one
  namespace: jonathan-schmitz
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - path: /js-inv-sales/?(.*)
        backend:
          serviceName: project-one
          servicePort: 8080
